--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,19 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:latest
+FROM python:3.12-slim
+
 ENV PYTHONUNBUFFERED=true
+
 WORKDIR /app
 
-ENV POETRY_HOME=/opt/poetry
-# ENV POETRY_VIRTUALENVS_IN_PROJECT=true
-ENV PATH="$POETRY_HOME/bin:$PATH"
-RUN curl -sSL https://install.python-poetry.org | python3 -
-RUN poetry config virtualenvs.create false
-# Copy poetry.lock* in case it doesn't exist in the repo
-COPY ./pyproject.toml ./poetry.lock* /app/
+### install poetry
+RUN pip install poetry && poetry config virtualenvs.in-project true
 
-# Allow installing dev dependencies to run tests
-ARG INSTALL_DEV=false
-RUN bash -c "if [ $INSTALL_DEV == 'true' ] ; then poetry install --no-root ; else poetry install --no-root --no-dev ; fi"
+### install dependencies and project
+ADD pyproject.toml README.md ./
+ADD app /app/app
+RUN poetry install --no-interaction --no-ansi
 
-COPY . /app
-ENV PYTHONPATH=/app
+### add executables to path
+ENV PATH="/app/.venv/bin:$PATH"
+
+### default cmd: run fastapi with 4 workers
+CMD ["fastapi", "run", "--workers", "4", "app/main.py"]
