--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,39 +4,84 @@ version = "1.1.0"
 description = "Backend API for farm-docker"
 authors = ["Jonas Renault <jonasrenault@gmail.com>"]
 readme = "README.md"
+homepage = "https://github.com/jonasrenault/fastapi-react-mongodb-docker#readme"
+repository = "https://github.com/jonasrenault/fastapi-react-mongodb-docker"
 packages = [
     { include = "app" },
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-requests = "^2.31.0"
-pymongo = "^4.5.0"
-fastapi = "^0.104.1"
-uvicorn = "^0.23.2"
-python-multipart = "^0.0.6"
-motor = "^3.3.1"
-pydantic = "^2.4.2"
-email-validator = "^2.1.0.post1"
+python = "^3.12"
+requests = "^2.32.3"
+pymongo = "^4.9.2"
+fastapi = {extras = ["standard"], version = "^0.115.0"}
+uvicorn = "^0.31.0"
+python-multipart = "^0.0.12"
+motor = "^3.6.0"
+pydantic = "^2.9.2"
+email-validator = "^2.2.0"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
-bcrypt = "^4.0.1"
-beanie = "^1.23.1"
-python-dotenv = "^1.0.0"
-fastapi-sso = "^0.7.2"
-pydantic-settings = "^2.0.3"
+bcrypt = "4.0.1"
+beanie = "^1.26.0"
+python-dotenv = "^1.0.1"
+fastapi-sso = "^0.15.0"
+pydantic-settings = "^2.5.2"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.10.1"
-pre-commit = "^3.5.0"
-httpx = "^0.25.0"
+black = "^24.8.0"
+pre-commit = "^4.0.0"
+httpx = "^0.27.2"
 asgi-lifespan = "^2.1.0"
-pytest = "^7.4.3"
-pytest-cov = "^4.1.0"
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
+ruff = "^0.6.9"
+mypy = "^1.11.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line_length = 90
+target_version = ['py312']
+
+[tool.ruff]
+exclude = [
+    ".venv",
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+    "venv",
+]
+src = ["app", "tests"]
+line-length = 90
+
+[tool.ruff.lint]
+ignore = []
+select = [
+    "E",
+    "F",
+    "W",
+    "I001",
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["app"]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.mypy]
+files = ["app", "tests"]
+disable_error_code = ["import-untyped"]
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::UserWarning",
+    'ignore::DeprecationWarning',
+]
