--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
-
 services:
   proxy:
-    image: traefik:v2.9
+    image: traefik:v3.2
     networks:
-      - ${TRAEFIK_PUBLIC_NETWORK?Variable not set}
+      - traefik-public
       - default
     ports:
       - "80:80"
@@ -16,8 +14,6 @@ services:
       - --providers.docker
       # Do not expose all Docker services, only the ones explicitly exposed
       - --providers.docker.exposedbydefault=false
-      # Disable Docker Swarm mode for local development
-      # - --providers.docker.swarmmode
       # Enable the access log, with HTTP requests
       - --accesslog
       # Enable the Traefik log, for configurations and errors
@@ -26,12 +22,13 @@ services:
       - --api
       # Enable the Dashboard and API in insecure mode for local development
       - --api.insecure=true
+      # Create web entrypoint listening on port 80
       - --entrypoints.web.address=:80
     labels:
       # Enable Traefik for this service, to make it available in the public network
       traefik.enable: true
       # Use the traefik-public network (declared below)
-      traefik.docker.network: ${TRAEFIK_PUBLIC_NETWORK?Variable not set}
+      traefik.docker.network: traefik-public
 
   db:
     image: mongo:latest
@@ -52,38 +49,55 @@ services:
       - db
     env_file:
       - .env
-    volumes:
-      - ./backend:/app
     ports:
-      - "8888:8888"
+      - "8000:8000"
     environment:
-      - SERVER_HOST=http://${DOMAIN?Variable not set}
+      - MONGO_HOST=db
     build:
       context: ./backend
       dockerfile: Dockerfile
-      args:
-        INSTALL_DEV: ${INSTALL_DEV-true}
-    command: /start-reload.sh
+    command:
+      - fastapi
+      - run
+      - --reload
+      - "app/main.py"
+    develop:
+      watch:
+        - path: ./backend
+          action: sync
+          target: /app
+          ignore:
+            - ./backend/.venv
+            - .venv
+        - path: ./backend/pyproject.toml
+          action: rebuild
     labels:
       - traefik.enable=true
       - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
-      - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
+      - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=8000
 
   frontend:
     image: '${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}'
+    env_file:
+      - .env
+    ports:
+      - "5173:5173"
     build:
       context: ./frontend
       dockerfile: Dockerfile.development
       args:
         FRONTEND_ENV: dev
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend:/app # Synchronise docker container with local change
-      - /app/node_modules # Avoid re-copying local node_modules. Cache in volume. See https://stackoverflow.com/questions/29181032/add-a-volume-to-docker-but-exclude-a-sub-folder
-    env_file:
-      - .env
     command: npm run dev -- --host
+    develop:
+      watch:
+        - path: ./frontend
+          action: sync
+          target: /app
+          ignore:
+            - ./frontend/node_modules
+            - node_modules
+        - path: ./frontend/package.json
+          action: rebuild
     labels:
       - traefik.enable=true
       - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.rule=PathPrefix(`/`)
