--- a/frontend/.env.test
+++ b/frontend/.env.test
@@ -1,3 +1,3 @@
-VITE_BACKEND_API_URL=http://test/api/v1/
+VITE_BACKEND_API_URL=http://farmdtest/api/v1/
 VITE_PWD_SIGNUP_ENABLED=true
 VITE_GA_TRACKING_ID=
